@@ -1,5 +1,9 @@
 2013-06-14  Ramon Casero  <rcasero@gmail.com>
 
+	* Add test_scimat_dmatrix_imgeodesic.m: (0.1.0)
+
+	- With "Toy example, ellipsoidal shape in 2D", "3D example, rat left ventricle"
+
 	* Add matlab/add_gerardus_paths.m: (0.1.1)
 
 	- Fix bug. Argument checking in a script produces error.
